Fixed #5 Footer text and alignment

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -30,6 +30,10 @@
     list-style: none
 }
 
+.site-footer #second-row {
+    width: 100%;
+}
+
 .footer-links li {
     display: block
 }
